# TestCraft

./: LICENSE  README.md
hwSpeedTest/: CMakeLists.txt
hwSpeedTest/apps/: CMakeLists.txt  main.cpp
hwSpeedTest/hwSpeed/: CMakeLists.txt
hwSpeedTest/hwSpeed/include/: AbstractHwSpeedTest.h  HwSpeedReport.h  SampleTestMethod_Export.h
hwSpeedTest/hwSpeed/src/: AbstractHwSpeedTest.cpp  HwSpeedReport.cpp
hwSpeedTest/tests/: CMakeLists.txt  HwSpeedReportTests.cpp  HwSpeedTestMock.h  SampleTestMethodUnitTestBase.h
